--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 		<header class="header">
 			<div class="container">
 				<div class="row flexbox-center">
-					<div class="col-lg-2 col-md-3 col-6">
+					<!-- <div class="col-lg-2 col-md-3 col-6">
 						<div class="logo">
 							<a href="#home"><img src="assets/img/logo.png" alt="logo" /></a>
 						</div>
-					</div>
+					</div> -->
 					<div class="col-lg-10 col-md-9 col-6">
 						<div class="responsive-menu"></div>
 					    <div class="mainmenu">
