--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<div class="single-about-box">
 						<i class="icofont icofont-ruler-pencil"></i>
 						<h4>Profile</h4>
-						<p>Birthdate: **/**/1996</p>
+						<p>Birthdate: 18/04/1996</p>
 						<p>Work address: Ho Chi Minh City, Viet Nam</p>
 					</div>
 				</div>
@@ -201,26 +201,26 @@
 						<ul>
 							<li>
 								<div class="feature-box-info">
-									<h4>Unlimited Features</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Front-end</h4>
+									<p>HTML5, CSS, Javascript, Bootstrap, Jquery</p>
 								</div>
 								<div class="feature-box-icon">
-									<i class="icofont icofont-brush"></i>
+									<i class="icofont icofont-eye"></i>
 								</div>
 							</li>
 							<li>
 								<div class="feature-box-info">
-									<h4>Responsive Design</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Back-end</h4>
+									<p>ASP.NET MVC Entity Framework, NodeJs MVC</p>
 								</div>
 								<div class="feature-box-icon">
-									<i class="icofont icofont-computer"></i>
+									<i class="icofont icofont-ship-wheel"></i>
 								</div>
 							</li>
 							<li>
 								<div class="feature-box-info">
-									<h4>Well Documented</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Design Pattern</h4>
+									<p>MVC, Dependence injection</p>
 								</div>
 								<div class="feature-box-icon">
 									<i class="icofont icofont-law-document"></i>
@@ -228,13 +228,14 @@
 							</li>
 							<li>
 								<div class="feature-box-info">
-									<h4>Full Free Chat</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Analysis &amp; Design Database</h4>
+									<p>SQL server, MySQL, Oracle</p>
 								</div>
 								<div class="feature-box-icon">
 									<i class="icofont icofont-heart-beat"></i>
 								</div>
 							</li>
+							
 						</ul>
 					</div>
 				</div>
@@ -248,11 +249,11 @@
 						<ul>
 							<li>
 								<div class="feature-box-icon">
-									<i class="icofont icofont-eye"></i>
+									<i class="icofont icofont-iphone"></i>
 								</div>
 								<div class="feature-box-info">
-									<h4>Retina ready</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Mobile App</h4>
+									<p>Xamarin</p>
 								</div>
 							</li>
 							<li>
@@ -260,26 +261,26 @@
 									<i class="icofont icofont-sun-alt"></i>
 								</div>
 								<div class="feature-box-info">
-									<h4>High Resolution</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>...</h4>
+									<p>.....................</p>
 								</div>
 							</li>
 							<li>
 								<div class="feature-box-icon">
-									<i class="icofont icofont-code-alt"></i>
+									<i class="icofont icofont-imac"></i>
 								</div>
 								<div class="feature-box-info">
-									<h4>Clean Codes</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Desktop App</h4>
+									<p>Eclipse RCP (Rich Client Platform)</p>
 								</div>
 							</li>
 							<li>
 								<div class="feature-box-icon">
-									<i class="icofont icofont-headphone-alt"></i>
+									<i class="icofont icofont-brush"></i>
 								</div>
 								<div class="feature-box-info">
-									<h4>Helping Supports</h4>
-									<p>Lorem ipsum dolor amet consectetur adipisicing eiusmod </p>
+									<h4>Java Framework</h4>
+									<p>E4, SWT (Jface)</p>
 								</div>
 							</li>
 						</ul>
